# MicroSQL

./: Dockerfile  LICENSE  README.md  app.py  build-docs.ps1  config.py  docs_apps.py  env_powershell.txt  pyproject.toml  requirements.txt
admin/: custom_admin.py
auth/: auth_service.py
database/: db.py
docs/docs-gen/: mkdocs.yml
docs/docs-gen/docs/: index.md  version.md
docs/docs-op/: hooks.py
docs/docs-op/site/: 404.html  index.html
docs/docs-op/site/search/: search_index.json
docs/docs-op/site/version/: index.html
internal/: exposed_logic.py
services/: cerberus.py  helios.py
static/css/: styles.css
static/js/: lobby-logo.js
templates/sqladmin/: base.html  cambiar-datos.html  cambiar-passw.html  index.html  layout.html  lobby-bio.html  lobby-logo.html  login-form.html  login.html
templates/sqladmin/modals/: advertencia.html  modificados.html
utilities/: helios_webhook.py  utilities_view.py  utils.py
views/: ayuda.py  exposed.py  panel_usuario.py
