[project]
name = "microsql"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "itsdangerous>=2.2.0",
    "sqladmin>=0.22.0",
    "pydantic-settings>=2.3.4",
    "pymysql>=1.1.2",
    "aiomysql>=0.3.2",
    "httpx>=0.28.1",
    "uvicorn>=0.40.0",
    "mkdocs==1.6.1",
    "mkdocs-get-deps==0.2.0",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-material==9.6.22",
    "mkdocs-material-extensions==1.3.1",
    "mkdocs-to-pdf>=0.10.1",
    "mkdocs-with-pdf>=0.9.3",
]
